--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,17 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic");
 
+@font-face {
+    font-family: 'Fenomen Sans';
+    src: url('fonts/FenomenSans-Regular.otf') format('otf'),
+         url('fonts/FenomenSans-Bold.otf') format('otf'),
+		 url('fonts/FenomenSans-Italic.otf') format('otf'),
+		 url('fonts/FenomenSans-Light.otf') format('otf'),
+		 url('fonts/FenomenSans-Semibold.otf') format('otf');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /*
 	Landed by HTML5 UP
 	html5up.net | @ajlkn
@@ -99,7 +110,7 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: rgba(255, 255, 255, 0.75);
-		font-family: "Roboto", Helvetica, sans-serif;
+		font-family: "Fenomen Sans", sans-serif;
 		font-size: 15pt;
 		font-weight: 100;
 		line-height: 1.75em;
@@ -2523,7 +2534,7 @@ input, select, textarea {
 			position: absolute;
 			left: 0;
 			top: 0;
-			background-image: url("images/overlay.png");
+			/*background-image: url("images/overlay.png");*/
 			width: 100%;
 			height: 100%;
 			z-index: 1;
@@ -3083,7 +3094,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 1s ease, opacity 1s ease;
 			-ms-transition: -ms-transform 1s ease, opacity 1s ease;
 			transition: transform 1s ease, opacity 1s ease;
-			background: rgba(23, 24, 32, 0.95);
+			background: rgba(28, 1, 2, 0.95);
 			border-style: solid;
 			opacity: 1;
 			position: absolute;
@@ -3451,10 +3462,10 @@ input, select, textarea {
 
 	#banner {
 		background-attachment: fixed;
-		background-color: #272833;
-		background-image: url("../../images/banner.jpg");
+		background-color: #ed1c24;
 		background-position: center center;
 		background-size: cover;
+		background-image: url("../../images/banner.jpg");
 		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
 		min-height: 100vh;
 		position: relative;
@@ -3471,10 +3482,10 @@ input, select, textarea {
 		}
 
 		#banner:after {
-			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+			background-image: -moz-linear-gradient(top, rgba(28, 1, 2, 0.95), rgba(28, 1, 2, 0.95)), url("images/overlay.png");;
+			background-image: -webkit-linear-gradient(top, rgba(28, 1, 2, 0.95), rgba(28, 1, 2, 0.95)), url("images/overlay.png");;
+			background-image: -ms-linear-gradient(top, rgba(28, 1, 2, 0.95), rgba(28, 1, 2, 0.95)), url("images/overlay.png");;
+			background-image: linear-gradient(top, rgba(28, 1, 2, 0.95), rgba(28, 1, 2, 0.95)), url("images/overlay.png");;
 			content: '';
 			display: block;
 			height: 100%;
