--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3149,15 +3149,15 @@ input, select, textarea {
 		}
 
 		.spotlight.style1 .content {
-			border-color: #e44c65;
+			border-color: #ed1c24;
 		}
 
 		.spotlight.style2 .content {
-			border-color: #5480f1;
+			border-color: #ed1c24;
 		}
 
 		.spotlight.style3 .content {
-			border-color: #39c088;
+			border-color: #ed1c24;
 		}
 
 		.spotlight.inactive .content {
