--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3736,11 +3736,11 @@ body.is-touch #banner {
   padding-left: 1.5em;
 }
 
-#footer .copyright li:first-child {
+/* #footer .copyright li:first-child {
   border-left: 0;
   margin-left: 0;
   padding-left: 0;
-}
+} */
 
 #footer .copyright li a {
   color: inherit;
@@ -4215,7 +4215,7 @@ body.is-touch #banner {
 
 /* XSmall */
 
-@media screen and (max-width: 480px) {
+ @media screen and (max-width: 480px) {
   /* Basic */
 
   html,
@@ -4261,20 +4261,69 @@ body.is-touch #banner {
     padding: 3em 1.5625em 5.25em 1.5625em;
   }
 
-  /* Footer */
 
-  #footer {
-    padding: 3em 1.25em;
-  }
+/* Footer */
 
-  #footer .copyright {
-    line-height: inherit;
-  }
+#footer {
+  padding: 3em 1.25em;
+}
 
-  #footer .copyright li {
-    border-left: 0;
-    display: block;
-    margin: 0;
-    padding: 0;
-  }
+#footer .copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#footer .copyright li {
+  position: relative;
+  padding: 0 15px; /* Adjust horizontal padding as needed */
+}
+
+
+#footer .copyright img {
+  max-width: 100px;
+}
+
+#footer .copyright li::before {
+  content: "|";
+  position: absolute;
+  left: 0;
+  color: rgba(255,255,255,0.3); /* Adjust color as needed */
+}
+
+#footer .copyright li:first-child::before {
+  content: none; /* Removes the first divider */
+}
+
+/* Footer */
+
+#footer {
+  padding: 3em 1.25em;
+}
+
+#footer .copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#footer .copyright li {
+  position: relative;
+  padding: 0 15px; /* Adjust horizontal padding as needed */
+}
+
+#footer .copyright li::before {
+  content: "|";
+  position: absolute;
+  left: 0;
+  color: rgba(255,255,255,0.3); /* Adjust color as needed */
+}
+
+#footer .copyright li:first-child::before {
+  content: none; /* Removes the first divider */
+}
+}
+
+#footer .copyright img {
+  max-width: 100px;
 }
