--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2270,6 +2270,10 @@ header p {
   margin: 0 0 1.5em 0;
 }
 
+header img {
+  max-width: 250px;
+}
+
 header h2 + p {
   font-size: 1.25em;
   margin-top: -1em;
