- bugfixes of Week 3 07/2025

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -217,12 +217,12 @@ a {
   -webkit-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
   -ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
   transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  color: #e44c65;
+  color: #ed1c24;
   text-decoration: none;
 }
 
 a:hover {
-  color: #e44c65 !important;
+  color: #ed1c24 !important;
   border-bottom-color: transparent;
 }
 
@@ -2301,7 +2301,7 @@ header.major {
 }
 
 header.major:after {
-  background: #e44c65;
+  background: #ed1c24;
   content: "";
   display: inline-block;
   height: 0.2em;
@@ -2370,7 +2370,7 @@ input[type="password"]:focus,
 input[type="email"]:focus,
 select:focus,
 textarea:focus {
-  border-color: #e44c65;
+  border-color: #ed1c24;
 }
 
 select {
@@ -2473,7 +2473,7 @@ input[type="radio"]:checked + label:before {
 
 input[type="checkbox"]:focus + label:before,
 input[type="radio"]:focus + label:before {
-  border-color: #e44c65;
+  border-color: #ed1c24;
 }
 
 input[type="checkbox"] + label:before {
@@ -2977,8 +2977,8 @@ input[type="button"]:hover,
 input[type="button"]:active,
 .button:hover,
 .button:active {
-  box-shadow: inset 0 0 0 1px #e44c65;
-  color: #e44c65 !important;
+  box-shadow: inset 0 0 0 1px #ed1c24;
+  color: #ed1c24 !important;
 }
 
 input[type="submit"]:active,
@@ -3020,7 +3020,7 @@ input[type="submit"].primary,
 input[type="reset"].primary,
 input[type="button"].primary,
 .button.primary {
-  background-color: #e44c65;
+  background-color: #ed1c24;
   box-shadow: none;
   color: #ffffff !important;
 }
@@ -3334,7 +3334,7 @@ body.is-touch .spotlight {
 }
 
 .wrapper.style2 {
-  background: #e44c65;
+  background: #ed1c24;
 }
 
 .wrapper.style2 input[type="text"]:focus,
@@ -3370,7 +3370,7 @@ body.is-touch .spotlight {
 .wrapper.style2 input[type="button"].primary,
 .wrapper.style2 .button.primary {
   background-color: #ffffff;
-  color: #e44c65 !important;
+  color: #ed1c24 !important;
 }
 
 .wrapper.style2 input[type="submit"].primary:hover,
@@ -3477,7 +3477,7 @@ body.is-touch .spotlight {
 
 .dropotron > li.active > a,
 .dropotron > li.active > span {
-  color: #e44c65;
+  color: #ed1c24;
 }
 
 .dropotron.level-0 {
@@ -3571,7 +3571,7 @@ body.landing .dropotron.level-0 {
 
 #header nav ul li.active > a,
 #header nav ul li.active > span {
-  color: #e44c65;
+  color: #ed1c24;
 }
 
 #header nav ul li > ul {
@@ -4102,7 +4102,7 @@ body.is-touch #banner {
   }
 
   #titleBar .toggle:before {
-    background: #e44c65;
+    background: #ed1c24;
     color: rgba(255, 255, 255, 0.5);
     content: "\f0c9";
     display: block;
