--- a/pages/events/events.css
+++ b/pages/events/events.css
@@ -1,4 +1,8 @@
-  .head-logo img {
+.wrapper {
+  padding: 2rem;
+}
+
+.head-logo img {
   width: 400px;
   height: auto;
   display: block;
@@ -11,13 +15,6 @@
   color: #fff;
   margin-top: 0; /* Remove extra top margin */
   font-weight: 700;
-}
-    
-    
-    
-body {
-  padding: 2rem;
-  line-height: 1.6;
 }
 
 .event-list {
