Twitch Live Stream Tracker
Created a script which shows "online" image on main page when Twitch stream /upceesports is online.

Images are not yet created, test version attached

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3816,6 +3816,17 @@ body.is-touch #banner {
   }
 }
 
+  #banner header ul {
+  display: flex;
+  justify-content: right;
+  gap: 1rem; /* mezera mezi ikonami */
+  padding-left: 0;
+}
+
+#banner header ul li {
+  list-style: none;
+}
+
 /* Medium */
 
 @media screen and (max-width: 980px) {
