--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4332,10 +4332,16 @@ body.is-touch #banner {
 
 .contact-icons {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
   gap: 1rem;
   margin-top: 0.5rem;
+}
+
+.contact-icons img {
+  width: 100px;
+  transition: transform 0.2s ease;
+  border-radius: 50%;
 }
 
 .icon-contact {
